# AI-Agent-with-Semantic-Memory

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  my_agents.py
src/tools/: search.py  vector_ops.py
